Fixed content-bg__circle cut off in smaller viewports
Sort of. Not sure if this is working in Firefox because 'fill-available' needs browser prefixes. Maybe there's a better way to do this?

--- a/app/scss/layout.scss
+++ b/app/scss/layout.scss
@@ -663,6 +663,9 @@ a {
   inset: 0 50% auto auto;
   transform: translateX(50%);
   width: 440px;
+  height: -moz-available;
+  height: -webkit-fill-available;
+  height: fill-available;
   opacity: 0.05;
   z-index: -1;
 }
